--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,17 @@
 		.CodeMirror { font-family: Consolas, 'Liberation Mono', Courier, monospace; font-size:12px; }
       	.CodeMirror {border-top: 1px solid black; border-bottom: 1px solid black;}
       	.CodeMirror-activeline-background {background: #e8f2ff !important;}
+      	path { fill:none; stroke:steelblue; stroke-width: 2;}
     </style>	
 </head>
 <body ng-controller="CodeCtrl">
 	<div class="navbar">
 		<div class="navbar-inner">
 			<a class="brand" href="#">UnrealEngine3 Node.js interface {{status()}}</a>
+
+			<select class="input-xlarge" ui-select ng-model="server.host">
+				<option ng-repeat="host in server.hosts" value="{{host}}">{{host}}</option>
+			</select>
 			<div class="pull-right">
 				<a href="http://github.com/nakosung">nakosung</a>
 			</div>
@@ -25,31 +30,34 @@
 		<div class="span1"></div>
 		<div class="row tabbable tabs-left">						
 			<ul class="nav nav-tabs span3">				
-				<li ng-class="{navHeader:true,active:server.active == code.id}" ng-repeat="code in server.list" ng-click="server.load(code.id)">
+				<li ng-class="{'nav-header':true,active:server.active == code.id}" ng-repeat="code in server.list" ng-click="server.load(code.id)">
 					<a href="#"> {{code.title}}</a>
 				</li>
+				<xychart val="server.plot"></xychart>
 			</ul>			
 			<div class="tab-content">
 				<div>
-					<input type="text" ng-model="server.title">
+					<input type="text" class="input-large" ng-model="server.title">
 				</div>
 				<div class="btn-group">
-					<button class="btn btn-primary" ng-click="server.run()">Run! (F5)</button>
-					<button class="btn" ng-click="server.save()">Save</button>				
+					<button ng-class="{btn:true,'btn-primary':true,'btn-disabled':!server.host}" ng-click="server.run()">Run! (ctrl+B)</button>
+					<button class="btn" ng-click="server.save()">Save (ctrl+S)</button>				
 					<button class="btn btn-danger" ng-click="server.discard(server.active)">Discard</button>				
-				</div>
-				<textarea id="code" rows="10" cols="80" ui-codemirror="{theme:'monokai',lineNumbers:true}" ng-model="server.code"></textarea>			
+				</div>				
+				<textarea id="code" rows="10" cols="80" ui-codemirror="{theme:'monokai',lineNumbers:true,indentWithTabs:true,indentUnit:4}" ng-model="server.code"></textarea>			
 				<textarea id="logs" rows="10" cols="80" ui-codemirror="{theme:'cobalt'}" ng-model="server.logs"></textarea>
 			</div>			
 		</div>
-	</div>
+	</div>		
 	<script type="text/javascript" src="lib/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="lib/sockjs-0.3.min.js"></script>
+	<script type="text/javascript" src="lib/underscore.min.js"></script>
 	<script type="text/javascript" src="lib/codemirror.js"></script>
 	<script type="text/javascript" src="lib/coffeescript.js"></script>	
 	<script type="text/javascript" src="lib/angular.min.js"></script>
 	<script type="text/javascript" src="lib/angular-ui.min.js"></script>
 	<script type="text/javascript" src="lib/ui-bootstrap-0.3.0.min.js"></script>
+	<script type="text/javascript" src="lib/d3.v3.min.js"></script>
 	<script type="text/javascript" src="lib/client.js"></script>
 </body>
 </html>
