make not dependent on ue3, provided a base for host-type-independency

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	<div class="navbar">
 		<div class="navbar-inner">
 			<a class="brand">				
-				UnrealEngine3 Node.js interface
+				ScriptHost 
 			</a>
 
 			<ul class="nav" ng-switch="server.online">
